2008-05-15  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/parser/GeoDocument.h
    * src/lib/geodata/parser/GeoDocument.cpp

    Un-inline GeoDocument and GeoNode.

2008-05-15  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/HttpFetchFile.cpp

    Fix memory leak.

2008-05-15  Claudiu Covaci  <claudiu.covaci@gmail.com>

    * src/lib/geodata/scene/GeoSceneDocument.{h,cpp}:
    * src/lib/geodata/scene/GeoSceneHead.{h,cpp}:
    * src/lib/geodata/scene/GeoSceneLegend.{h,cpp}:
    * src/lib/geodata/scene/GeoSceneMap.{h,cpp}:
    * src/lib/geodata/scene/GeoSceneSettings.{h,cpp}:

    - Yet another set of d-pointerifications (this time
    also moved the protected members in the d-pointer)
    - Add GEODATA_EXPORT to class declarations


2008-05-15  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * data/maps/earth/OpenStreetMap/0/0/0.png

    Add OpenStreetMap base tile.

2008-05-15  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * data/maps/earth/OpenStreetMap
    * data/maps/earth/OpenStreetMap/OpenStreetMap.dgml
    * data/maps/earth/OpenStreetMap/OpenStreetMap-preview.png

    Add .dgml and icon for OpenStreetMap theme.

2008-05-15  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/GeoPainter.cpp

    Fix memory leak.

2008-05-15  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/MarbleTest.h
    * src/geoshape/GeoToolFactory.h
    * src/geoshape/GeoShapeFactory.h
    * src/lib/PluginManager.h
    * src/lib/gps/GpxFile.h
    * src/lib/gps/GpxSax.h
    * src/lib/gps/Waypoint.h
    * src/lib/gps/WaypointContainer.h
    * src/lib/gps/GpxFileModel.h
    * src/lib/DiscCache.h
    * src/lib/MarbleAboutDialog.h
    * src/lib/MarbleThemeSelectView.h
    * src/lib/FileViewModel.h
    * src/lib/MapScaleFloatItem.h
    * src/lib/XmlHandler.h
    * src/lib/PlaceMarkContainer.h
    * src/lib/CacheStoragePolicy.h
    * src/lib/GpxFileViewItem.h
    * src/lib/CompassFloatItem.h
    * src/lib/MarbleControlBox.h
    * src/lib/MarbleNavigator.h